<resources>
    <string name="app_name">CarrotChegg</string>
    <string name="login_hint_text">아이디 또는 이메일</string>
    <string name="password_hint_text">비밀번호</string>
    <string name="login">로그인</string>
    <string name="terms_intro">초록캠퍼스에 오신 것을 환영합니다.\n초록캠퍼스 서비스 이용을 위하여 아래의 약관 동의
        \n및 회원가입이 필요합니다.</string>
    <string name="warning_text">선택 사항에 동의하지 않으셔도 서비스 가입 및 이용이 가능합니다.\n
    단, 필수 항목에 동의하지 않으실 경우 회원가입이 제한됩니다.</string>
    <string name="terms">
    <b>이용약관</b>\n\n

    <b>마지막 업데이트: 2023.10.25\n\n</b>

    <b>1. 조건 수락</b>\n\n
    초록캠퍼스(이하 "앱")를 다운로드, 설치 또는 사용함으로써 귀하는 본 이용약관("약관")을 준수할 것에 동의하게 됩니다. 본 약관에 동의하지 않는 경우 앱을 사용하지 마십시오.\n\n

    <b>2. 앱 설명</b>\n\n
    초록캠퍼스는 한국 대학생들에게 교육 자원과 서비스를 제공하기 위한 것으로 질문 올리기, 질문에 답하기, 질문의 답을 보기를 포함하여 다양한 기능을 제공합니다.\n\n

    <b>3. 사용자등록</b>\n\n
    3.1. 앱의 특정 기능을 사용하기 위해 사용자 계정을 생성해야 할 수 있습니다. 등록 과정에서 정확한 정보 제공을 할 것을 사용자는 동의합니다.\n\n
    3.2. 귀하는 귀하의 계정 자격 증명의 기밀을 유지하고 귀하의 계정으로 수행되는 모든 활동에 대한 책임이 있습니다.\n\n

    <b>4. 사용자 가이드라인</b>\n\n
    4.1. 귀하는 모든 관련 법규에 따라 앱을 사용하는 데 동의합니다.\n\n
    4.2. 귀하는 스팸 발송, 해킹 또는 악성 프로그램 배포를 포함하여 유해하거나 파괴적이거나 남용적인 행위를 하지 않습니다.\n\n
    4.3. 귀하는 타인의 지적 재산권 또는 본 계약 조건을 침해하는 행위를 하지 않을 것입니다.\n\n

    <b>5. 내용</b>\n\n
    5.1. 앱은 사용자가 텍스트, 이미지 또는 파일과 같은 콘텐츠를 업로드, 공유 또는 기타 방법으로 제공할 수 있습니다.\n\n
    5.2. 업로드한 내용에 대해서는 전적으로 귀하의 책임이며, 불법적이거나 유해하거나 타인의 권리를 침해하는 내용을 업로드하지 않기로 사용자는 동의합니다.\n\n

    <b>6. 터미네이션</b>\n\n
    당사는 본 약관을 위반한 경우 앱에 대한 귀하의 액세스를 종료할 수 있는 권한을 당사의 단독 재량으로 보유하고 있습니다.\n\n

    <b>7. 프라이버시</b>\n\n
    귀하의 앱 사용에는 개인정보 수집 및 이용에서 확인할 수 있는 당사의 개인정보 보호정책이 적용됩니다.\n\n

    <b>8. 약관 변경</b>\n\n
    당사는 본 약관을 고지 후 업데이트 할 수 있으며, 이러한 업데이트 후에도 앱을 계속 사용하는 것이 개정 약관에 동의하는 것으로 간주됩니다.\n\n

    <b>9. 준거법</b>\n\n
    본 약관은 대한민국 법률의 적용을 받습니다.\n\n

    <b>10. 연락처 정보</b>\n\n
    본 약관과 관련하여 질문이나 우려 사항이 있는 경우 parang56@soongsil.ac.kr 로 문의하시기 바랍니다.\n
</string>
    <string name="conditions">
    <b>개인정보 수집 및 이용약관\n\n</b>

        <b>최종 업데이트: 2023.10.25\n\n</b>

    <b>1. 소개</b>\n
    1.1. [초록캠퍼스](이하 "앱")은 사용자의 개인 정보 및 개인 정보를 보호하는 데 전념합니다. 본 개인 정보 수집 및 사용 계약("본 계약")은 사용자가 당사 앱을 사용할 때 개인 정보를 수집 및 사용하는 것에 대해 설명합니다.\n

    <b>2. 수집된 개인정보의 종류</b>\n
    2.1. 당사는 다음과 같은 유형의 개인정보를 수집할 수 있습니다:\n
    사용자 계정 정보: 계정을 생성할 때 이름, 이메일 주소 및 기타 계정 정보를 수집할 수 있습니다.\n
    사용 정보: 앱의 기능 및 컨텐츠와의 상호 작용을 포함하여 앱 사용 방법에 대한 정보를 수집합니다.\n
    장치 정보: 장치 모델, 운영 체제, 고유 장치 식별자 등 앱에 액세스하기 위해 사용하는 장치에 대한 정보를 수집할 수 있습니다.\n

    <b>3. 개인정보 수집 목적</b>\n
    3.1. 당사는 다음과 같은 목적으로 개인정보를 수집합니다:\n
    앱의 기능 및 서비스에 대한 액세스를 제공합니다.\n
    앱 내에서 사용자의 경험을 개인화합니다.\n
    앱의 업데이트, 변경 및 새로운 기능에 대해 사용자와 소통합니다.\n
    당신의 문의나 도움 요청에 응답하기 위해서입니다.\n
    법적 요구사항 및 규정을 준수합니다.\n

    <b>4. 개인정보 수집 및 이용 동의</b>\n
    4.1. 귀하는 앱을 사용함으로써 본 계약에 명시된 개인 정보의 수집 및 사용에 동의합니다.\n
    4.2. 앱 사용을 중단하고 계정 삭제를 요청하는 방법으로 개인정보 수집 및 이용 동의를 철회할 수 있습니다.\n

    <b>5. 개인정보 공유</b>\n
    5.1. 당사는 다음과 같은 경우를 제외하고는 귀하의 개인 정보를 타사와 공유하지 않습니다:\n
    법률 또는 법적 절차에 의해 요구되는 경우.\n
    당사의 권리, 안전 또는 다른 이용자의 권리와 안전을 보호하기 위하여 필요한 때.\n
    앱을 합병, 인수, 매각하는 경우.\n

    <b>6. 개인정보 보안</b>\n
    6.1. 당사는 귀하의 개인정보를 무단 접근, 공개, 변경 및 파기로부터 보호하기 위해 합당한 조치를 취합니다.\n

    <b>7. 개인정보 보유</b>\n
    7.1. 당사는 귀하의 개인 정보를 수집한 목적을 달성하기 위해 필요한 기간 동안만 보관합니다.\n

    <b>8. 사용자 권한</b>\n
    8.1. 귀하는 귀하의 개인 정보와 관련하여 다음과 같은 권리를 가집니다:\n
    개인 정보에 액세스하고 검토합니다.\n
    개인 정보를 수정하거나 업데이트합니다.\n
    개인정보 삭제를 요청합니다.\n
    개인정보 처리를 제한하거나 이의를 제기합니다.\n
    개인정보의 휴대성을 요청합니다.\n

    <b>9. 연락처 정보</b>\n
    9.1. 귀하의 개인 정보 또는 본 계약과 관련된 질문, 우려 또는 요청사항은 parang56@soongsil.ac.kr 로 문의하시기 바랍니다.
</string>
    <string name="login_error_msg">아이디 혹은 비밀번호가 일치하지 않습니다.</string>
    <string name="error_msg_pw_character">특수 문자는 !@*-_? 중에서만 사용이 가능합니다.</string>
    <string name="error_msg_pw_length">비밀번호는 6자리 이상 12자리 이하여야 합니다.</string>
    <string name="pw_check">비밀번호 확인</string>
    <string name="error_msg_pw_check">비밀번호가 일치하지 않습니다.</string>
    <string name="error_msg_email">이메일 형식이 올바르지 않습니다.</string>
    <string name="error_msg_id">아이디는 영어 대소문자와 숫자만 사용 가능하고\n 2자리 이상 12자리 이하여야 합니다.</string>
    <string name="error_msg_nickname_eng">영어 닉네임은 2글자 이상 12글자 이하여야 합니다.</string>
    <string name="error_msg_nickname_kor">한글 닉네임은 1글자 이상 6글자 이하여야 합니다.</string>
    <string name="error_msg_nickname_both">닉네임은 특수문자 없이 영어로 2글자 이상 12글자 이하, 혹은
    한글로 1글자 이상 6글자 이하여야 합니다.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>